--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h2>Aspiring Software Developer</h2>
                     <p>Computer Science student at LPU with a passion for data analysis, AI, and software development.</p>
                     <div class="hero-buttons">
-                        <a href="attached_assets/HarshitGuptaResume2025.pdf" class="btn btn-primary" download>Download Resume</a>
+                        <a href="HarshitGuptaResume2025.pdf" class="btn btn-primary" download>Download Resume</a>
                         <a href="https://drive.google.com/file/d/11DoelM0cmxp_eTAzRo7i-PzdIBGZS-5Y/view?usp=sharing" class="btn btn-secondary">View Video CV</a>
                     </div>
                 </div>
